--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,15 @@
 @import '~bootstrap/scss/bootstrap';
+
+body {
+  font-family: Verdana;
+}
+
+.navbar {
+  padding: 0
+}
+
+.btn {
+  border: 1px solid;
+  margin: 2px
+
+}  
